--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </main>
   <footer class="footer">
     <div class="footer-container">
-      <a class="github" href="#" target="_blank" rel="noopener noreferrer">github</a>
+      <a class="github" href="https://github.com/Gazuz33" target="_blank" rel="noopener noreferrer">Gazuz33</a>
       <a class="rss" href="https://rs.school/js/" target="_blank" rel="noopener noreferrer">
         <span class="rss-year">'21</span>
       </a>
